--- a/jember.html
+++ b/jember.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="jember.html"><img src="./img/Logo Jember.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="jember.html"><img src="image/Logo Jember.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
             JEMBER
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="card p-5">
                     <h2><b>Sejarah</b></h2>
-                    <img src="./img/Sejarah.jpg" alt="Gambar Papuma">
+                    <img src="image/Sejarah.jpg" alt="Gambar Papuma">
                     <p>Jember adalah salah satu kabupaten yang terletak di wilayah Jawa Timur. Jember memiliki luas 3.293,34 km2 dengan ketinggian antara 0 - 3.330 mdpl. Kabupaten Jember memiliki luas ±3.293,34 km2, dan panjang pantai ±170 km, sedangkan Zona Ekonomi Ekslusif (ZEE) ± 8.338,5 km2 dan berbatasan langsung dengan Kabupaten Banyuwangi, Bondowoso, Lumajang.</p>
                     <p>Mayoritas penduduk Kabupaten Jember adalah Suku Jawa dan minoritas Suku Osing dan Suku Madura yang sebagian besar beragama Islam. Suku Madura dominan di daerah utara dan Suku Jawa di daerah selatan dan pesisir pantai. Percampuran kedua kebudayaan Madura dan Jawa di Kabupaten Jember melahirkan satu kebudayaan baru yang bernama budaya Pendalungan. Masyarakat Pendalungan di Jember mempunyai karakteristik yang unik sebagai hasil dari penetrasi kedua budaya tersebut. Kesenian Can Macanan Kaduk merupakan satu hasil budaya masyarakat Pendalungan yang masih bertahan sampai sekarang di Kabupaten Jember.</p>
                     <p>Jember dalam sejarah dan perjalananya di mulai dari masa kerajaan dalam hal ini Majapahit adalah salah satu kerajaan yang memiliki andil besar terhadap dimulainya peradaban Jember. Cerita Jember menurut buku Nagarakretagama (1953) karangan Prof. Slamet Muljana seorang ahli Filologi dari Universitas indonesia (UI). Buku ini kebetulan salah satu dari koleksi buku sejarah. Perpustakaan universitas Muhammadiyah Jember. Menurut buku tersebut tertulis bahwa Raja Majapahit Hayam Wuruk yang bergelar "Rakryan Mantri Maka Pramuka" mencapai masa kejayaannya dalam memerintah Majapahit bersama Mahapati Amangkubumi Gajah Mada dan beliau bersama para punggawa kerajaan melakukan perjalanan dari Majapahit menuju wilayah timur hingga daerah Patukangan Situbondo. Jember adalah sebagai daerah perlintasan Raja beserta rombongan pada tahun 1359 M. Terbukti dengan bekas peninggalannya yang masih bisa kita lihat hingga kini yaitu tersebar di daerah Jember selatan dua diantaranya adalah Candi Deres yg terletak di Desa Purwoasri Kec. Gumukmas dan sumur kuno tembikar di Desa Muneng Kec. Gumukmas Jember.</p>  
@@ -61,7 +61,7 @@
             <div class="container">
                 <div class="card p-5">
                     <h2><b>Wisata</b></h2>
-                    <img src="./img/Papuma.jpg" alt="Papuma Pride">
+                    <img src="image/Papuma.jpg" alt="Papuma Pride">
                     <p>Secara geografis, bagian selatan Jember memang berbatasan dengan Samudera Hindia. Maka dari itu, tidak heran jika kota suwar-suwir ini memiliki banyak gugusan pantai, terutama di sisi barat dan selatan. Namun, pantai bukan satu-satunya tempat wisata di Jember yang bisa dikunjungi. Ada banyak lainnya yang juga sayang untuk dilewatkan. Nah, berikut ini adalah referensi tempat wisata di Jember yang kami rekomendasikan untuk memaksimalkan perjalanan Anda di kota ini.</p>
                     <p><b>1. Pantai Pasir Putih</b></p>
                     <p>Lokasi: Desa Lojejer, Kecamatan Wuluhan, Kabupaten Jember, Jam operasional: 24 jam, Harga tiket: Rp17.000</p>
