--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     
     <footer class="footer-distributed">
         <div class="footer-left">
-      <img src="img/Logo Jember.png">
+      <img src="image/Logo Jember.png">
             <h3>About<span>Jember</span></h3>
 
             <p class="footer-links">
